tests/snapshots/examples_fixtures/type_system__failing__170_match_disagreement_all_concrete_ordering_invariant_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Match Arm Type Mismatch

The arms of this `match` expression do not agree on a type.

  examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx:4:18
  |
3 |         true -> "oops",
  |                 ------ first arm returns `String`

  |                 ------ this arm established the expected type
4 |         false -> 1,
  |                  ^
  |                  - arm 2 has type `Int`

  |                  - arm 2 conflicts with that type

Note:
  first arm type: String
  this arm type: Int
  the first arm fixes the type expected from the whole `match`
  this arm produces the competing type

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
